# APPFL

./: .dockerignore  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  APPFL-Webinar.ipynb  APPFL.ipynb  CITATION.cff  DIMAT_INTEGRATION.md  FABRIC.md  LICENSE  NodeCommunication.ipynb  README.md  design_doc.md  inter.sub  requirements.txt  run_original_dimat.py  setup.cfg  setup.py  setup_and_run_appfl.sh  shell.nix  shell.nix.bk  test.py
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
appfl/: __init__.py  data.py  run.py  run.sh  run1.py  run1.sh  run_grpc_client.py  run_grpc_server.py  run_idea.py  run_trial.py  test_dataload.py  utils.py
datasets/: CIFAR10_Preprocess.py  Coronahack_Preprocess.py  FEMNIST_Preprocess.py  MNIST_Preprocess.py  README.md  torchvision_Preprocess.py
docs/: README.md  conf.py  index.rst  myfile.md  requirements.txt
examples/: README.md  ReadDataset.py  appfl_covid_anl.py  celeba.py  check_status.py  cifar10.py  cifar10_async_mpi.py  cifar10_async_mpi_update.py  cifar10_aug.py  cifar10_bfgs.py  cifar10_grpc.py  cifar10_iterates.py  cifar10_mpi_async.py  cifar10_mpi_sync.py  cifar10_pca.py  cifar10_resnet.py  cifar10_serial.py  cifar10_sync_mpi.py  cifar10_sync_mpi_update.py  cifar10_trial.py  cifar10_vec.py  coronahack.py  coronahack_grpc.py  coronahack_mpi.py  coronahack_no_preprocess.py  coronahack_no_preprocess_grpc.py  coronahack_no_preprocess_mpi.py  coronahack_trial.py  covid.py  credit_serial.py  deepcovid.py  eval.py  eval_tent_summarize.csv  explore_joint.ipynb  fedrecon_no_mpi.py  femnist.py  (+58 more)
(+2023 files in other folders)
