[metadata]
name = example-package-mark123ghj1
version = 0.0.4
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/APPFL/APPFL
project_urls =
    Bug Tracker = https://github.com/APPFL/APPFL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
