[metadata]
name = appfl
version = 0.0.1
description = An open-source package for privacy-preserving federated learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/APPFL/APPFL
project_urls =
    Bug Tracker = https://github.com/APPFL/APPFL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
